--- a/model.ipynb
+++ b/model.ipynb
@@ -5,8 +5,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:56:59.363985Z",
-     "start_time": "2019-08-13T10:56:59.360964Z"
+     "end_time": "2019-08-14T13:10:59.962610Z",
+     "start_time": "2019-08-14T13:10:59.960177Z"
     }
    },
    "outputs": [],
@@ -22,8 +22,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:57:04.247762Z",
-     "start_time": "2019-08-13T10:56:59.366913Z"
+     "end_time": "2019-08-14T13:11:03.640061Z",
+     "start_time": "2019-08-14T13:10:59.966107Z"
     }
    },
    "outputs": [
@@ -38,7 +38,7 @@
       "  \"You can install the OpenMP library by the following command: ``brew install libomp``.\", UserWarning)\n",
       "Using TensorFlow backend.\n",
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0813 12:57:04.225690 4646581696 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
+      "W0814 15:11:03.619426 4610758080 deprecation_wrapper.py:119] From /Users/piotrgabrys/.pyenv/versions/miniconda3-4.3.30/lib/python3.6/site-packages/optuna/integration/tensorflow.py:7: The name tf.train.SessionRunHook is deprecated. Please use tf.estimator.SessionRunHook instead.\n",
       "\n"
      ]
     }
@@ -49,6 +49,7 @@
     "import numpy as np\n",
     "import pandas as pd\n",
     "import joblib\n",
+    "from datetime import datetime\n",
     "\n",
     "from lightgbm import LGBMClassifier\n",
     "import optuna\n",
@@ -69,11 +70,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T05:13:50.846199Z",
-     "start_time": "2019-08-14T05:13:50.836525Z"
+     "end_time": "2019-08-14T13:11:03.648576Z",
+     "start_time": "2019-08-14T13:11:03.644019Z"
     },
     "lines_to_next_cell": 2
    },
@@ -88,8 +89,8 @@
    "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:57:11.010811Z",
-     "start_time": "2019-08-13T10:57:04.256548Z"
+     "end_time": "2019-08-14T13:11:09.942873Z",
+     "start_time": "2019-08-14T13:11:03.651979Z"
     },
     "_cell_guid": "79c7e3d0-c299-4dcb-8224-4455121ee9b0",
     "_uuid": "d629ff2d2480ee46fbb7e2d37f6b5fab8052498a",
@@ -114,16 +115,24 @@
    "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:57:46.814354Z",
-     "start_time": "2019-08-13T10:57:11.013372Z"
+     "end_time": "2019-08-14T13:11:22.841402Z",
+     "start_time": "2019-08-14T13:11:09.944690Z"
     }
    },
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "start\n",
+      "hashing finished\n"
+     ]
+    },
+    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/piotrgabrys/data/python3/ieee/codes/fe_users.py:17: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
+      "/Users/piotrgabrys/data/python3/ieee/codes/fe_users.py:19: FutureWarning: Sorting because non-concatenation axis is not aligned. A future version\n",
       "of pandas will change to not sort by default.\n",
       "\n",
       "To accept the future behavior, pass 'sort=False'.\n",
@@ -131,6 +140,16 @@
       "To retain the current behavior and silence the warning, pass 'sort=True'.\n",
       "\n",
       "  all_data = pd.concat([train, test])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "concat data finished\n",
+      "grouping finished\n",
+      "stats calculated\n",
+      "merged all data\n"
      ]
     }
    ],
@@ -143,8 +162,8 @@
    "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:57:49.821040Z",
-     "start_time": "2019-08-13T10:57:46.816293Z"
+     "end_time": "2019-08-14T13:11:26.078826Z",
+     "start_time": "2019-08-14T13:11:22.843262Z"
     }
    },
    "outputs": [
@@ -165,8 +184,8 @@
    "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:57:50.542114Z",
-     "start_time": "2019-08-13T10:57:49.824030Z"
+     "end_time": "2019-08-14T13:11:26.875316Z",
+     "start_time": "2019-08-14T13:11:26.081448Z"
     }
    },
    "outputs": [],
@@ -179,8 +198,8 @@
    "execution_count": 8,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:58:26.634425Z",
-     "start_time": "2019-08-13T10:57:50.544073Z"
+     "end_time": "2019-08-14T13:12:02.489063Z",
+     "start_time": "2019-08-14T13:11:26.877345Z"
     }
    },
    "outputs": [],
@@ -199,8 +218,8 @@
    "execution_count": 9,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:58:27.389774Z",
-     "start_time": "2019-08-13T10:58:26.636167Z"
+     "end_time": "2019-08-14T13:12:03.061473Z",
+     "start_time": "2019-08-14T13:12:02.492576Z"
     }
    },
    "outputs": [],
@@ -213,8 +232,8 @@
    "execution_count": 10,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:58:38.607759Z",
-     "start_time": "2019-08-13T10:58:27.391538Z"
+     "end_time": "2019-08-14T13:12:14.092156Z",
+     "start_time": "2019-08-14T13:12:03.063835Z"
     }
    },
    "outputs": [],
@@ -227,8 +246,8 @@
    "execution_count": 11,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:58:38.686319Z",
-     "start_time": "2019-08-13T10:58:38.609391Z"
+     "end_time": "2019-08-14T13:12:14.174766Z",
+     "start_time": "2019-08-14T13:12:14.093974Z"
     },
     "lines_to_next_cell": 2
    },
@@ -242,8 +261,8 @@
    "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:59:04.151637Z",
-     "start_time": "2019-08-13T10:58:38.688211Z"
+     "end_time": "2019-08-14T13:12:41.541952Z",
+     "start_time": "2019-08-14T13:12:14.176800Z"
     },
     "lines_to_next_cell": 2
    },
@@ -258,8 +277,8 @@
    "execution_count": 13,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:59:13.736542Z",
-     "start_time": "2019-08-13T10:59:04.153714Z"
+     "end_time": "2019-08-14T13:12:52.478978Z",
+     "start_time": "2019-08-14T13:12:41.543885Z"
     }
    },
    "outputs": [],
@@ -288,8 +307,8 @@
    "execution_count": 14,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:59:13.745975Z",
-     "start_time": "2019-08-13T10:59:13.738580Z"
+     "end_time": "2019-08-14T13:12:52.493456Z",
+     "start_time": "2019-08-14T13:12:52.486361Z"
     }
    },
    "outputs": [],
@@ -303,8 +322,8 @@
    "execution_count": 15,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T10:59:13.750908Z",
-     "start_time": "2019-08-13T10:59:13.747803Z"
+     "end_time": "2019-08-14T13:12:52.501487Z",
+     "start_time": "2019-08-14T13:12:52.496629Z"
     }
    },
    "outputs": [],
@@ -314,11 +333,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 16,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T12:41:13.259055Z",
-     "start_time": "2019-08-13T12:41:13.252381Z"
+     "end_time": "2019-08-14T13:12:52.513170Z",
+     "start_time": "2019-08-14T13:12:52.504723Z"
     }
    },
    "outputs": [],
@@ -339,16 +358,17 @@
     "        print('ROC accuracy: {}'.format(model_scores[-1]))\n",
     "        del val, y_valid\n",
     "    \n",
+    "    print('')\n",
     "    return np.mean(model_scores)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T12:42:01.372419Z",
-     "start_time": "2019-08-13T12:42:01.364460Z"
+     "end_time": "2019-08-14T13:12:52.523301Z",
+     "start_time": "2019-08-14T13:12:52.515667Z"
     }
    },
    "outputs": [],
@@ -384,73 +404,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T14:25:23.644818Z",
-     "start_time": "2019-08-13T12:42:02.662948Z"
+     "end_time": "2019-08-14T13:12:52.533249Z",
+     "start_time": "2019-08-14T13:12:52.525940Z"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ROC accuracy: 0.9567467457405775\n",
-      "ROC accuracy: 0.963336044474564\n",
-      "ROC accuracy: 0.9647586585663408\n",
-      "ROC accuracy: 0.9591584467619989\n",
-      "ROC accuracy: 0.9625810064516032\n",
-      "ROC accuracy: 0.9590554045914841\n",
-      "ROC accuracy: 0.9621024255437666\n",
-      "ROC accuracy: 0.9622490082815178\n",
-      "ROC accuracy: 0.9557141805512451\n",
-      "ROC accuracy: 0.9561348707572045\n",
-      "ROC accuracy: 0.9565690609627973\n",
-      "ROC accuracy: 0.9581682239628199\n",
-      "ROC accuracy: 0.9550286805698729\n",
-      "ROC accuracy: 0.9595700259322112\n",
-      "ROC accuracy: 0.9566089083574226\n",
-      "ROC accuracy: 0.9610047972070186\n",
-      "ROC accuracy: 0.9629218107901683\n",
-      "ROC accuracy: 0.9645582672674383\n",
-      "ROC accuracy: 0.9632401151293449\n",
-      "ROC accuracy: 0.9630101966573317\n",
-      "ROC accuracy: 0.959037332634855\n",
-      "ROC accuracy: 0.955117517896528\n",
-      "ROC accuracy: 0.9594840029878245\n",
-      "ROC accuracy: 0.9628698171029347\n",
-      "ROC accuracy: 0.9621010716820361\n",
-      "ROC accuracy: 0.9595651260987736\n",
-      "ROC accuracy: 0.9596066315324285\n",
-      "ROC accuracy: 0.9598380934826607\n",
-      "ROC accuracy: 0.9598701315252681\n",
-      "ROC accuracy: 0.9602484376112618\n",
-      "ROC accuracy: 0.9589004730729325\n",
-      "ROC accuracy: 0.9639249033965734\n",
-      "ROC accuracy: 0.9563680718378244\n",
-      "ROC accuracy: 0.9547432566645853\n",
-      "ROC accuracy: 0.9571991261630671\n",
-      "ROC accuracy: 0.9587102891654813\n",
-      "ROC accuracy: 0.9566416587869113\n",
-      "ROC accuracy: 0.9572200853988052\n",
-      "ROC accuracy: 0.9614151441752267\n",
-      "ROC accuracy: 0.9617437729965892\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "study = optuna.create_study()\n",
-    "study.optimize(objective, n_trials=5)"
+    "if SEARCH_PARAMS:\n",
+    "\n",
+    "    if os.path.isfile('study.pkl'):\n",
+    "        study = joblib.load('study.pkl')\n",
+    "    else:\n",
+    "        study = optuna.create_study()\n",
+    "    study.optimize(objective, n_trials=5)\n",
+    "    \n",
+    "    params = study.best_params\n",
+    "\n",
+    "else:\n",
+    "    \n",
+    "    params = {'num_leaves': 302,\n",
+    "             'max_depth': 157,\n",
+    "             'n_estimators': 1200,\n",
+    "             'subsample_for_bin': 290858,\n",
+    "             'min_child_samples': 79,\n",
+    "             'reg_alpha': 1.0919573524807885,\n",
+    "             'colsample_bytree': 0.5653288564015742,\n",
+    "             'learning_rate': 0.028565794309535042}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-13T20:27:30.547293Z",
-     "start_time": "2019-08-13T20:27:30.506681Z"
+     "end_time": "2019-08-14T13:12:52.547630Z",
+     "start_time": "2019-08-14T13:12:52.536030Z"
     }
    },
    "outputs": [],
@@ -486,11 +477,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T06:17:50.524636Z",
-     "start_time": "2019-08-14T06:17:50.495719Z"
+     "end_time": "2019-08-14T13:12:52.556915Z",
+     "start_time": "2019-08-14T13:12:52.550537Z"
     }
    },
    "outputs": [],
@@ -502,6 +493,8 @@
     "    else:\n",
     "        study = optuna.create_study()\n",
     "    study.optimize(objective, timeout=60*60*9)\n",
+    "    \n",
+    "    joblib.dump(study, 'study.pkl')\n",
     "    \n",
     "    params = study.best_params\n",
     "\n",
@@ -519,11 +512,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T08:55:59.230530Z",
-     "start_time": "2019-08-14T06:17:52.180376Z"
+     "end_time": "2019-08-14T14:26:25.765450Z",
+     "start_time": "2019-08-14T13:12:52.559338Z"
     }
    },
    "outputs": [
@@ -531,15 +524,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ROC accuracy: 0.9798144733746067\n",
-      "ROC accuracy: 0.9784691636285554\n",
-      "ROC accuracy: 0.9779377723386475\n",
-      "ROC accuracy: 0.9775917288697898\n",
-      "ROC accuracy: 0.9801430168439399\n",
-      "ROC accuracy: 0.9786529346047034\n",
-      "ROC accuracy: 0.9774750702757128\n",
-      "ROC accuracy: 0.9774154455916848\n",
-      "0.9784\n",
+      "ROC accuracy: 0.9762962995571658\n",
+      "ROC accuracy: 0.9792364570859659\n",
+      "ROC accuracy: 0.9789477070938123\n",
+      "ROC accuracy: 0.9755484028383585\n",
+      "ROC accuracy: 0.9816712831067586\n",
+      "ROC accuracy: 0.97665033589438\n",
+      "ROC accuracy: 0.9781432426808675\n",
+      "ROC accuracy: 0.9792764149496753\n",
+      "0.9782\n",
       "{'num_leaves': 302, 'max_depth': 157, 'n_estimators': 1200, 'subsample_for_bin': 290858, 'min_child_samples': 79, 'reg_alpha': 1.0919573524807884, 'colsample_bytree': 0.5653288564015742, 'learning_rate': 0.028565794309535042}\n"
      ]
     }
@@ -573,24 +566,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-08-14T08:56:00.926561Z",
-     "start_time": "2019-08-14T08:55:59.251986Z"
+     "end_time": "2019-08-14T14:26:27.328358Z",
+     "start_time": "2019-08-14T14:26:25.790718Z"
     }
    },
    "outputs": [],
    "source": [
-    "submission.to_csv('submission_{}.csv'.format(str(model_score)))"
+    "timestamp = str(int(datetime.timestamp(datetime.now())))\n",
+    "submission.to_csv('{}_submission_{}.csv'.format(timestamp, str(model_score)))"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
